--- a/Client/partials/event.html
+++ b/Client/partials/event.html
@@ -17,8 +17,9 @@
       <p>{{evento.description}}</p>
       <span><b>Start:</b> {{evento.startdate}}</span>
       <span><b>Stop:</b> {{evento.stopdate}}</span>
+      <button ng-click="createDoc()" class="btn">Create doc <span class="glyphicon glyphicon-share"></span></button>
+      
     </div>
-
     <!-- Team Member Profiles -->
 
     <div class="row">
