--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -63,8 +63,12 @@
 
 
       </div>
+      <!-- <div class="col-md-9 main-content" style="text-align:center;" ng-hide="loadComplete" >
+        <img class="loading" style="width:100px; margin:30px auto;" src="css/img/loading-2.png" height="100"/>
+        <h3>Caricamento della mappa in corso...</h3>
+      </div> -->
+      <div class="col-md-9 main-content"  ng-init="init()">
 
-      <div class="col-md-9 main-content" ng-init="init()">
         <div class="row">
           <div map-lazy-load="https://maps.google.com/maps/api/js">
             <ng-map default-style="true" center="{{latitudine}}, {{longitudine}}" zoom="12">
@@ -77,7 +81,7 @@
                     </p>
                     <p><i>Creator: {{eventoVic.creator_name}} {{eventoVic.creator_lastname}}, {{eventoVic.creationdate}}</i></p>
                     <h3>Description</h3>
-                    <p>{{eventoVic.description}}</p>
+                    <p>{{eventoVic.event_description}}</p>
                     <span><b>Start:</b> {{eventoVic.startdate}}</span>
                     <span><b>Stop:</b> {{eventoVic.stopdate}}</span>
                   </div>
