--- a/Client/partials/home.html
+++ b/Client/partials/home.html
@@ -6,93 +6,12 @@
       </div>
       <div class="docs-cont">
         <!--REPLACE WITH ng-repeat-->
-        <div class="media clearfix doc-thumb-container">
+        <div class="media clearfix doc-thumb-container" ng-repeat="doc in documenti"  ng-click="goto(doc.id)">
           <div class="pull-left media-top">
             <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
           </div>
           <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
-          </div>
-        </div>
-
-        <div class="media clearfix doc-thumb-container">
-          <div class="pull-left media-top">
-            <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-          </div>
-          <div class="">
-            <h4 class="">Document title</h4>
-            <p class="small">[[Lorem Ipsum è un testo segnaposto utilizzatadsfawdsfasf asfasdfsf..]]</p>
+            <h4 class="">{{doc.name}}</h4>
           </div>
         </div>
 
