--- a/Client/partials/addevent.html
+++ b/Client/partials/addevent.html
@@ -3,9 +3,9 @@
 
     <div class="col-md-6" map-lazy-load="https://maps.google.com/maps/api/js">
 
-      <ng-map default-style="true" center="{{vm.address+' '+vm.city}}" zoom="14">
-        <marker position="44.501482, 11.330802" title="Hello World!"></marker>
-        <marker position="{{vm.address+' '+vm.city}}" title="{{address}}"></marker>
+      <ng-map default-style="true" center="newPlace? {{place.address+' '+place.city}} : {{selectedPlace.latitude+', '+selectedPlace.longitude}}" zoom="14">
+        <marker ng-if="newPlace" position="{{place.address+' '+place.city}}" title="{{place.address}}"></marker>
+        <marker ng-if="!newPlace" position="{{selectedPlace.latitude+', '+selectedPlace.longitude}}" title="{{selectedPlace.address}}"></marker>
       </ng-map>
     </div>
 
@@ -14,70 +14,84 @@
         <form name="myForm" id="myForm">
           <fieldset class="form-group col-md-12">
             <label >Titolo evento</label>
-            <input type="text" class="form-control" ng-model="vm.eventTitle" id="" placeholder="Inserisci titolo" required>
+            <input type="text" class="form-control" ng-model="event.name" id="" placeholder="Inserisci titolo" required>
           </fieldset>
 
           <fieldset class="form-group col-md-12">
             <label for="event-description">Descrizione</label>
-            <textarea class="form-control" id="event-description" ng-model="vm.description" placeholder="Inserisci testo" rows="4" required></textarea>
+            <textarea class="form-control" id="event-description" ng-model="event.description" placeholder="Inserisci testo" rows="4" required></textarea>
           </fieldset>
 
           <fieldset class="form-group col-md-6">
             <label>Data inizio</label>
-            <input type="date" class="form-control" ng-model="vm.dataStart" id="" placeholder="Data" required>
+            <input type="date" class="form-control" ng-model="event.startdate" id="" placeholder="Data" required>
           </fieldset>
         </fieldset>
 
         <fieldset class="form-group col-md-6">
           <label>Data fine</label>
-          <input type="date" class="form-control" ng-model="vm.dataEnd" id="" placeholder="Data" required>
+          <input type="date" class="form-control" ng-model="event.stopdate" id="" placeholder="Data" required>
         </fieldset>
       </fieldset>
 
       <fieldset class="clearfix col-md-12" style="padding:0px;">
         <legend style="padding-left:15px;">Place</legend>
         <fieldset class="form-group col-md-12">
-          <label >Nome posto</label>
-          <input type="text" class="form-control" id="" ng-model="vm.place" placeholder="Nome" required>
-        </fieldset>
+          <label>Nome posto</label>
+          <input type="text" class="form-control" id="" ng-model="searchPlace" placeholder="Nome posto o indirizzo" required>
+          <div class="search-results">
+            <ul class="list-group">
+              <li class="list-group-item" ng-repeat="place in places" ng-click="setPlace(place)">
+                  <div ng-if="place.noPlaces = true">
+                    <b>{{place.message}} <span class="glyphicon glyphicon-plus"></span></b>
 
-        <fieldset class="form-group col-md-12">
-          <label >Indirizzo</label>
-          <input ng-model="vm.address" class="form-control" placeholder="Indirizzo" required>
-        </fieldset>
+                  </div>
+                  <div ng-if="place.noPlace === undefined">
+                    <b>{{place.name}}</b>
+                    <p>{{place.address+", "+place.city+", "+place.cap+", "+place.nation}}</p>
+                  </div>
 
-        <fieldset class="form-group col-md-6">
-          <label >Città</label>
-          <input ng-model="vm.city" type="text" class="form-control col-md-6" id="" placeholder="Città" required>
+              </li>
+            </ul>
+          </div>
         </fieldset>
+        <div ng-show="newPlace">
+          <fieldset class="form-group col-md-12">
+            <label>Indirizzo</label>
+            <input ng-model="new.address" class="form-control" placeholder="Indirizzo" required>
+          </fieldset>
 
-        <fieldset class="form-group col-md-6">
-          <label>Cap</label>
-          <input type="text" class="form-control" ng-model="vm.zip" id="" placeholder="Cap" required>
-        </fieldset>
+          <fieldset class="form-group col-md-6">
+            <label>Città</label>
+            <input ng-model="new.city" type="text" class="form-control col-md-6" id="" placeholder="Città" required>
+          </fieldset>
 
-        <fieldset class="form-group col-md-12">
-          <label>Paese</label>
-          <input type="text" class="form-control" ng-model="vm.country" id="" placeholder="Nation" required>
-        </fieldset>
+          <fieldset class="form-group col-md-6">
+            <label>Cap</label>
+            <input type="text" class="form-control" ng-model="place.cap" id="" placeholder="Cap" required>
+          </fieldset>
+
+          <fieldset class="form-group col-md-12">
+            <label>Paese</label>
+            <input type="text" class="form-control" ng-model="place.nation" id="" placeholder="Nation" required>
+          </fieldset>
+        </div>
+
+
       </fieldset>
 
       <fieldset class="form-group col-md-12">
         <label>Categoria</label>
-        <select class="c-select" ng-model="vm.category" required>
-          <option value="1">Sport</option>
-          <option value="2">Meeting</option>
-          <option value="3">Workshop</option>
-          <option value="3">Altro</option>
+        <select class="c-select" ng-model="event.category_name" required>
+          <option ng-repeat="category in categories" value="{{category.name}}">{{category.name}}</option>
         </select>
       </fieldset>
       <fieldset class="col-md-12 clearfix">
-        start + stop ?
       </fieldset>
 
       <div class="col-md-12 clearfix">
         <button class="btn btn-primary" ng-click="toggleCustom()">Invita</button>
-        <button type="button" ng-disabled="myForm.$invalid" ng-click="createEvent(vm)" class="btn btn-primary">Crea evento</button>
+        <button type="button" ng-disabled="" ng-click="createPlace()" class="btn btn-primary">Crea evento</button>
       </div>
 
     </form>
@@ -86,29 +100,41 @@
 </div>
 <div class="col-md-12 overlay" ng-hide="custom">
   <div class="col-md-6 overlay-box">
-    <h1>Aggiugni invitati</h1>
+    <fieldset>
+      <label >Aggiungi membri</label>
+      <div>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search for..." ng-model="searchUser">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Cerca</button>
+          </span>
+        </div>
+        <div class="search-results">
+          <ul class="list-group">
+            <li class="list-group-item" ng-repeat="result in results" ng-click="pushToarray(result.id)">
+              <div class="row">
+                  <img class="img-responsive img-circle" style="width:50px;display:inline-block;margin: 0 10px;" ng-src="{{result.image_profile}}">
+                  <h3 style="display: inline-block; margin: 0 10px;">{{result.name}} {{result.lastname}}</h3>
+              </div>
+            </li>
+          </ul>
+        </div>
 
-    <fieldset class="form-group col-md-12">
-      <label>Gruppi</label>
-      <select class="c-select" ng-model="vm.groups">
-        <option ng-repeat="gruppo in gruppi" value="{{gruppo.id}}">{{gruppo.nome}}</option>
-      </select>
+        <h4>ID delle Persone che hai invitato</h4>
+        <div class="invited-list" >
+            <span ng-repeat="partecipant in partecipantList">
+              <b>{{partecipant}}</b>,
+            </span>
+        </div>
+      </div>
+
     </fieldset>
-    <!-- <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search for...">
-    <span class="input-group-btn">
-    <button class="btn btn-default" type="button">Go!</button>
-  </span>
-</div>-->
-<div class="search-results">
-
-</div>
 <!--
 <h4>Persone che hai invitato</h4>
 <div class="invited-list">
   nessuno
 </div>-->
-<button class="btn btn-warning" ng-click="toggleCustom()">CHIUDI</button>
+<button class="btn btn-warning" ng-click="toggleCustom(); addPartecipant(1)">CHIUDI</button>
 </div>
 </div>
 
