--- a/Client/partials/event.html
+++ b/Client/partials/event.html
@@ -1,40 +1,47 @@
-<div style="overflow:scroll; height:95%">
-  <div class="container">
-
-    <div class="col-md-6" map-lazy-load="https://maps.google.com/maps/api/js">
-      <ng-map default-style="true" center="{{evento.latitude}}, {{evento.longitude}}" zoom="13">
-        <marker position="{{evento.latitude}}, {{evento.longitude}}" title="{{evento.event_name}}" on-click="openMap(event, evento)"></marker>
-      </ng-map>
-    </div>
-
-    <div class="col-md-6">
-      <h2>{{evento.event_name}}</h2>
-      <p><strong>Category: </strong>
-        <span class="label label-primary tags">{{evento.category_name}}</span>
-      </p>
-      <p><i>Creator: Mario Rossi; Creation Date {{evento.creationdate}}</i></p>
-      <h3>Description</h3>
-      <p>{{evento.description}}</p>
-      <span><b>Start:</b> {{evento.startdate}}</span>
-      <span><b>Stop:</b> {{evento.stopdate}}</span>
-      <button ng-click="createDoc(evento.event_name)" class="btn">Create doc <span class="glyphicon glyphicon-share"></span></button>
-
-    </div>
-    <!-- Team Member Profiles -->
-
+<div style="overflow:scroll; height:100%">
+  <div class="container" style="margin: 5px;">
     <div class="row">
+      <div class="col-md-6" map-lazy-load="https://maps.google.com/maps/api/js">
+        <ng-map default-style="true" center="{{evento.latitude}}, {{evento.longitude}}" zoom="13">
+          <marker position="{{evento.latitude}}, {{evento.longitude}}" title="{{evento.event_name}}" on-click="openMap(event, evento)"></marker>
+        </ng-map>
+      </div>
 
-      <div class="col-sm-6">
+      <div class="col-md-6">
+        <h2 class="page-header">{{evento.event_name}}</h2>
+        <p><strong>Category: </strong>
+          <span class="label label-primary tags">{{evento.category_name}}</span>
+        </p>
+        <p>Created by: <img style="height:30px;display:inline;" class="img-responsive img-circle" ng-src="{{evento.creator_image_profile}}" /><i> {{evento.creator_name}} {{evento.creator_lastname}}</i></p>
+        <p><i>Creation Date: {{evento.creationdate}}</i></p>
+        <h3 class="page-header"> <span class="glyphicon glyphicon-map-marker" style="margin:0 8px;"></span> Place</h3>
+        <address>
+          <strong>{{evento.place_name}}</strong><br>
+          {{evento.address}}, {{evento.cap}}, {{evento.city}} <br>
+          {{evento.nation}}<br>
+        </address>
+        <h3 class="page-header"> <span class="glyphicon glyphicon-paperclip" style="margin:0 8px;"></span> Description</h3>
+        <blockquote>
+          <p style="font-size: 14.5px;">{{evento.event_description}}</p>
+        </blockquote>
+        <h4><div class="glyphicon glyphicon-calendar" style="margin-right:8px;"></div>Time</h4>
+        <p><span class="glyphicon glyphicon-play" style="margin:0 8px;"></span> <b>Start:</b> {{evento.startdate}}</p>
+        <p><span class="glyphicon glyphicon-stop" style="margin:0 8px;"></span> <b>Stop:</b> {{evento.stopdate}}</p>
+        <button ng-click="createDoc(evento.event_name)" class="btn">Create doc <span class="glyphicon glyphicon-share"></span></button>
+      </div>
+    </div>
+
+    <!-- Team Member Profiles -->
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
         <h2 class="page-header">Partecipants</h2>
         <div class="group-members-list">
-          <div class="col-sm-2" ng-repeat="p in partecipanti">
+          <div class="col-sm-2 col-md-2 col-xs-3" ng-repeat="p in partecipanti">
             <img class="img-responsive img-circle" ng-src="{{p.image_profile}}">
             <h5 class="small">{{p.name}} {{p.lastname}}</h5>
           </div>
         </div>
       </div>
-
-
     </div>
 
     <!-- Our Customers -->
