--- a/Client/css/add.css
+++ b/Client/css/add.css
@@ -72,7 +72,8 @@
 
 .document {
   width: 92%;
-  padding:20px 30px;
+  padding:40px 30px;
+  padding-bottom: 100px;
   height: auto;
   min-height: 70%;
   margin: 15px auto;
